--- a/app/src/main/res/layout/cardview_popup_document.xml
+++ b/app/src/main/res/layout/cardview_popup_document.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_height="wrap_content"
+    android:id="@+id/messages"
     android:layout_width="match_parent"
-    android:layout_marginBottom="0dp"
-    card_view:cardCornerRadius="0dp"
+    android:layout_height="wrap_content"
+    android:paddingBottom="30dp"
     card_view:cardElevation="1dp"
     card_view:contentPaddingLeft="16dp"
     card_view:contentPaddingTop="16dp"
     card_view:contentPaddingRight="16dp"
     card_view:cardPreventCornerOverlap="false"
-    card_view:theme="@style/AlertDialog.AppCompat"
-    android:layout_marginTop="5dp">
-    <RelativeLayout
-        android:id="@+id/title"
+    card_view:theme="@style/AlertDialog.AppCompat">
+    <LinearLayout
+        android:id="@+id/title_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
-        android:paddingBottom="10dp">
-        <FrameLayout
-            android:id="@+id/title_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:paddingLeft="2dp"
-            android:paddingBottom="2dp">
+        android:background="@drawable/top_border"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:elevation="4dp"
+        android:layout_marginBottom="20dp">
+            <ImageButton
+                android:id="@+id/left_arrow"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/leftarrow"
+                android:layout_toLeftOf="@+id/author_message"
+                android:layout_gravity="center_vertical"/>
             <TextView
                 android:id="@+id/info_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/time"
-                android:gravity="center"
+                android:layout_toRightOf="@+id/left_arrow"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="15dp"
                 android:text="Subject:"
-                android:layout_weight="1"
-                android:textAppearance="@style/Subject"
+                android:layout_weight="100"
+                android:textAppearance="@style/dialog_title"
                 android:maxLines="1"
                 android:ellipsize="end"
                 />
@@ -43,91 +48,66 @@
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:gravity="center"
+                android:layout_marginLeft="100dp"
+                android:layout_marginRight="30dp"
+                android:paddingTop="20dp"
                 android:layout_toRightOf="@+id/info_text"
                 android:layout_alignParentRight="true"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#FFF"
                 android:text="Time"
                 />
-        </FrameLayout>
-        <FrameLayout
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/message_layout"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/title_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="2dp">
+            android:paddingLeft="20dp">
             <TextView
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|left"
                 android:paddingRight="50dp"
-                android:textColor="@color/colorPrimary"
                 android:text=""
-                android:maxLines="1"
-                android:ellipsize="end"
                 />
-        </FrameLayout>
-        <FrameLayout
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/author_layout"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@+id/message_layout"
-            android:paddingLeft="2dp">
-            android:layout_marginBottom="4dp">
+            android:paddingLeft="20dp">
+            android:paddingBottom="10dp">
             <TextView
-                android:id="@+id/profilepic"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/profilepic"
-                android:layout_toLeftOf="@+id/author"
-                android:layout_gravity="start"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
-            <TextView
+                android:layout_below="@+id/message_layout"
                 android:id="@+id/author"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_toLeftOf="@+id/profilepic"
-                android:layout_alignParentRight="true"
-                android:text="by:"
                 android:textAppearance="@style/sender_style"
-               />
-            <ImageView
-                android:id="@+id/options"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="right"
-                android:layout_alignParentRight="true"
-                android:textColor="@drawable/button_selector"
-                android:layout_toRightOf="@+id/author"
-                android:background="@drawable/threedots"
+                android:text="by:"
+                android:layout_weight="1"
                 />
-        </FrameLayout>
-        <FrameLayout
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/footer"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
             android:layout_below="@+id/author_layout"
             android:layout_marginBottom="10dp">
-
             <TextView
                 android:id="@+id/link"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_toLeftOf="@+id/filename"
+                android:layout_toRightOf="@+id/clear"
                 android:layout_alignParentRight="true" />
             <TextView
                 android:id="@+id/filename"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_toRightOf="@+id/link"
+                android:layout_toRightOf="@+id/clear"
                 android:layout_alignParentRight="true" />
             <TextView
                 android:id="@+id/docId"
@@ -135,6 +115,5 @@
                 android:layout_height="0dp"
                 android:layout_toRightOf="@+id/filename"
                 android:layout_alignParentRight="true" />
-        </FrameLayout>
+        </LinearLayout>
     </RelativeLayout>
-</android.support.v7.widget.CardView>
