--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,19 +12,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:cardElevation="2dp"
 >
-<LinearLayout
-    android:layout_width="@dimen/nav_header_height"
-    android:layout_height="@dimen/nav_header_height"
-    android:gravity="bottom"
-    android:orientation="vertical"
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:layout_marginLeft="60dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 <ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:src="@drawable/llogo"
     android:layout_gravity="center"/>
-</LinearLayout>
+</FrameLayout>
 </RelativeLayout>
