--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_marginBottom="0dp"
     card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="1dp"
+    card_view:cardElevation="2dp"
     card_view:contentPaddingLeft="16dp"
     card_view:contentPaddingTop="16dp"
     card_view:contentPaddingRight="16dp"
@@ -33,6 +33,7 @@
                 android:layout_height="match_parent"
                 android:layout_toLeftOf="@+id/time"
                 android:gravity="center"
+                android:maxLength="13"
                 android:text="Subject:"
                 android:layout_weight="1"
                 android:textAppearance="@style/Subject"
