--- a/app/src/main/res/layout/card_view_messages.xml
+++ b/app/src/main/res/layout/card_view_messages.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/card_bottom_line"
     android:layout_marginBottom="0dp"
     card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="1dp"
+    card_view:cardElevation="2dp"
     card_view:contentPaddingLeft="16dp"
     card_view:contentPaddingTop="16dp"
     card_view:contentPaddingRight="16dp"
@@ -35,6 +35,7 @@
                 android:layout_toLeftOf="@+id/time_message"
                 android:gravity="center"
                 android:maxLines="1"
+                android:maxLength="13"
                 android:ellipsize="end"
                 android:layout_alignParentLeft="true"
                 android:text="Subject:"
