--- a/app/src/main/res/layout/cardview_popup_document.xml
+++ b/app/src/main/res/layout/cardview_popup_document.xml
@@ -12,7 +12,7 @@
     card_view:contentPaddingRight="16dp"
     card_view:cardPreventCornerOverlap="false"
     card_view:theme="@style/AlertDialog.AppCompat">
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -37,7 +37,8 @@
                 android:layout_toRightOf="@+id/left_arrow"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="50dp"
+                android:layout_gravity="left"
                 android:text="Subject:"
                 android:layout_weight="100"
                 android:textAppearance="@style/dialog_title"
@@ -48,15 +49,15 @@
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="100dp"
                 android:layout_marginRight="30dp"
                 android:paddingTop="20dp"
+                android:layout_gravity="right"
                 android:layout_toRightOf="@+id/info_text"
                 android:layout_alignParentRight="true"
                 android:textColor="#FFF"
                 android:text="Time"
                 />
-        </LinearLayout>
+        </FrameLayout>
         <LinearLayout
             android:id="@+id/message_layout"
             android:layout_marginTop="20dp"
