--- a/app/src/main/res/layout/cardview_popup_message.xml
+++ b/app/src/main/res/layout/cardview_popup_message.xml
@@ -12,7 +12,7 @@
         card_view:cardPreventCornerOverlap="false"
         card_view:theme="@style/AlertDialog.AppCompat">
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/title_layout"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -34,9 +34,9 @@
                 android:id="@+id/author_message"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="50dp"
                 android:paddingTop="19dp"
-                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_gravity="left"
                 android:layout_toRightOf="@+id/left_arrow"
                 android:text="Upload Document"
                 android:textAppearance="@style/dialog_title"
@@ -45,14 +45,15 @@
                 android:id="@+id/time_message"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="200dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="right"
                 android:layout_toRightOf="@+id/author_message"
                 android:layout_alignParentRight="true"
                 android:text="Time"
                 android:textColor="#FFF"/>
-        </LinearLayout>
-        <LinearLayout
+        </FrameLayout>
+        <FrameLayout
             android:id="@+id/message_layout_message"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/title_layout"
@@ -68,14 +69,15 @@
                 android:paddingRight="20dp"
                 android:textAppearance="@style/Subject"
                 />
-        </LinearLayout>
-        <LinearLayout
+        </FrameLayout>
+        <FrameLayout
             android:id="@+id/author_layout_message"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_below="@+id/message_layout_message"
             android:paddingLeft="2dp">
+            android:paddingBottom="5dp"
             android:layout_marginBottom="4dp">
             <TextView
                 android:layout_below="@+id/message_layout_message"
@@ -84,19 +86,12 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:layout_weight="1"/>
-            <ImageView
-                android:layout_toRightOf="@+id/message_layout_message"
-                android:id="@+id/delete_message"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/threedots"
-                android:layout_weight="1"/>
+
             <TextView
                 android:id="@+id/messageid"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_toRightOf="@+id/delete_message"
+                android:layout_toRightOf="@+id/info_text_message"
                 android:layout_alignParentRight="true" />
-        </LinearLayout>
+        </FrameLayout>
     </RelativeLayout>
