--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:textColor="#FF00"
             android:paddingLeft="56dp"
+            android:gravity="center"
             android:layout_marginBottom="24dp"
             android:paddingRight="56dp"/>
         <!--  Name Label -->
