--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,9 +11,8 @@
             />
         <item
             android:id="@+id/nav_contacts"
-            android:icon="@drawable/contacts"
-            android:title="Contacts"
-            android:visible="false"/>
+            android:icon="@drawable/documents"
+            android:title="Visit DMS" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/website"
