--- a/app/src/main/res/layout/cardview_popup_document.xml
+++ b/app/src/main/res/layout/cardview_popup_document.xml
@@ -55,7 +55,7 @@
                 android:layout_toRightOf="@+id/info_text"
                 android:layout_alignParentRight="true"
                 android:textColor="#FFF"
-                android:text="Time"
+                android:text=""
                 />
         </FrameLayout>
         <LinearLayout
